primary-keycloak-realization-filter

--- a/gazon-service/src/main/resources/application.yml
+++ b/gazon-service/src/main/resources/application.yml
@@ -5,6 +5,12 @@ server:
       timeout: -1
 
 spring:
+#  security:
+#    oauth2:
+#      resourceserver:
+#        jwt:
+#          issuer-uri: http://localhost:8083/realms/Gazon
+#          jwk-set-uri: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
   application:
     name: gazon-service
   profiles:
@@ -17,7 +23,7 @@ spring:
 
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/gazon_db?useUnicode=yes&characterEncoding=UTF-8&serverTimezone=Europe/Moscow
+    url: jdbc:postgresql://localhost:5431/gazon_db?useUnicode=yes&characterEncoding=UTF-8&serverTimezone=Europe/Moscow
     username: root
     password: root
     hikari:
