--- a/gazon-service/src/main/resources/application.yml
+++ b/gazon-service/src/main/resources/application.yml
@@ -5,12 +5,12 @@ server:
       timeout: -1
 
 spring:
-#  security:
-#    oauth2:
-#      resourceserver:
-#        jwt:
-#          issuer-uri: http://localhost:8083/realms/Gazon
-#          jwk-set-uri: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8180/realms/GazonRealm
+          jwk-set-uri: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
   application:
     name: gazon-service
   profiles:
@@ -55,3 +55,13 @@ logging:
     org:
       hibernate:
         search=DEBUG:
+
+#openapi:
+#  components:
+#    securitySchemes:
+#        bearerAuth:
+#          type: http
+#          scheme: bearer
+#          bearerFormat: JWT
+#  security:
+#    bearerAuth: []
