--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
-version: '2'
+version: "3.8"
+
 services:
   app:
     image: 'denispronin/gazon-service:1.2.0'
@@ -15,8 +16,33 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/gazon_db
   db:
     image: 'postgres:12.12'
-    container_name: db
     environment:
-      - POSTGRES_DB=gazon_db
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=root
+      POSTGRES_DB: gazon_db
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: root
+    healthcheck:
+      test: "exit 0"
+    ports:
+      - "5431:5432"
+  keycloak:
+    build:
+      context: .
+      dockerfile: Dockerfile_KeyCloak&Provider
+    command: start-dev --import-realm
+    container_name: keycloak
+    volumes:
+      - ./custom-user-provider/src/main/resources/realm-export.json:/opt/keycloak/data/import/realm-export.json
+    environment:
+      KC_DB: postgres
+      KC_DB_USERNAME: root
+      KC_DB_PASSWORD: root
+      KC_DB_URL_HOST: db
+      KC_DB_URL_DATABASE: gazon_db
+      KC_DB_SCHEMA: public
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+    ports:
+      - "8180:8080"
+    depends_on:
+      db:
+        condition: service_healthy
