--- a/docker-compose-non-app.yml
+++ b/docker-compose-non-app.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 
 services:
-  db:
+  gazon-no-app-db:
     image: 'postgres:12.12'
     environment:
       POSTGRES_DB: gazon_db
@@ -11,19 +11,19 @@ services:
       test: "exit 0"
     ports:
       - "5431:5432"
-  keycloak:
+  gazon-no-app-keycloak:
     build:
       context: .
       dockerfile: Dockerfile_KeyCloak&Provider
     command: start-dev --import-realm
-    container_name: keycloak
+    container_name: gazon-no-app-keycloak
     volumes:
       - ./custom-user-provider/src/main/resources/realm-export.json:/opt/keycloak/data/import/realm-export.json
     environment:
       KC_DB: postgres
       KC_DB_USERNAME: root
       KC_DB_PASSWORD: root
-      KC_DB_URL_HOST: db
+      KC_DB_URL_HOST: gazon-no-app-db
       KC_DB_URL_DATABASE: gazon_db
       KC_DB_SCHEMA: public
       KEYCLOAK_ADMIN: admin
@@ -31,5 +31,5 @@ services:
     ports:
       - "8180:8080"
     depends_on:
-      db:
+      gazon-no-app-db:
         condition: service_healthy
