--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,20 @@
 version: "3.8"
 
 services:
-  app:
+  gazon-app:
     image: 'denispronin/gazon-service:1.2.0'
     build:
       context: .
       dockerfile: Dockerfile_Gazon
-    container_name: app
+    container_name: gazon-app
     ports:
       - "8080:8080"
       - "5005:5005"
     depends_on:
-      - db
+      - gazon-db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/gazon_db
-  db:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://gazon-db:5432/gazon_db
+  gazon-db:
     image: 'postgres:12.12'
     environment:
       POSTGRES_DB: gazon_db
@@ -24,19 +24,19 @@ services:
       test: "exit 0"
     ports:
       - "5431:5432"
-  keycloak:
+  gazon-keycloak:
     build:
       context: .
       dockerfile: Dockerfile_KeyCloak&Provider
     command: start-dev --import-realm
-    container_name: keycloak
+    container_name: gazon-keycloak
     volumes:
       - ./custom-user-provider/src/main/resources/realm-export.json:/opt/keycloak/data/import/realm-export.json
     environment:
       KC_DB: postgres
       KC_DB_USERNAME: root
       KC_DB_PASSWORD: root
-      KC_DB_URL_HOST: db
+      KC_DB_URL_HOST: gazon-db
       KC_DB_URL_DATABASE: gazon_db
       KC_DB_SCHEMA: public
       KEYCLOAK_ADMIN: admin
@@ -44,5 +44,5 @@ services:
     ports:
       - "8180:8080"
     depends_on:
-      db:
+      gazon-db:
         condition: service_healthy
