--- a/gazon-service/pom.xml
+++ b/gazon-service/pom.xml
@@ -38,8 +38,7 @@
         <dependency>
             <groupId>ru.vito.springvito</groupId>
             <artifactId>gazon-microservice-starter</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
