--- a/custom-user-provider/src/main/resources/non-app-realm-export.json
+++ b/custom-user-provider/src/main/resources/non-app-realm-export.json
@@ -7,7 +7,7 @@
   "defaultSignatureAlgorithm": "RS256",
   "revokeRefreshToken": false,
   "refreshTokenMaxReuse": 0,
-  "accessTokenLifespan": 300,
+  "accessTokenLifespan": 3000,
   "accessTokenLifespanForImplicitFlow": 900,
   "ssoSessionIdleTimeout": 1800,
   "ssoSessionMaxLifespan": 36000,
@@ -45,418 +45,6 @@
   "quickLoginCheckMilliSeconds": 1000,
   "maxDeltaTimeSeconds": 43200,
   "failureFactor": 30,
-  "roles": {
-    "realm": [
-      {
-        "id": "31ea5620-532a-4d5e-89c4-024a56568e56",
-        "name": "uma_authorization",
-        "description": "${role_uma_authorization}",
-        "composite": false,
-        "clientRole": false,
-        "containerId": "99743964-0a5e-4465-b088-705cc37e4b50",
-        "attributes": {}
-      },
-      {
-        "id": "5000cbab-4c0b-4c83-b466-32d6a4290342",
-        "name": "user",
-        "description": "User Role",
-        "composite": true,
-        "composites": {
-          "client": {
-            "gazon-service": [
-              "client_user"
-            ]
-          }
-        },
-        "clientRole": false,
-        "containerId": "99743964-0a5e-4465-b088-705cc37e4b50",
-        "attributes": {}
-      },
-      {
-        "id": "cb12a982-86f0-408f-9318-37e5ed410d4b",
-        "name": "admin",
-        "description": "Admin Role",
-        "composite": true,
-        "composites": {
-          "client": {
-            "gazon-service": [
-              "client_admin"
-            ]
-          }
-        },
-        "clientRole": false,
-        "containerId": "99743964-0a5e-4465-b088-705cc37e4b50",
-        "attributes": {}
-      },
-      {
-        "id": "6d041105-b719-49a3-a9a9-192342be0d3b",
-        "name": "default-roles-gazon-service-realm",
-        "description": "${role_default-roles}",
-        "composite": true,
-        "composites": {
-          "realm": [
-            "offline_access",
-            "uma_authorization"
-          ],
-          "client": {
-            "account": [
-              "manage-account",
-              "view-profile"
-            ]
-          }
-        },
-        "clientRole": false,
-        "containerId": "99743964-0a5e-4465-b088-705cc37e4b50",
-        "attributes": {}
-      },
-      {
-        "id": "c8a248ff-c6c3-434e-a74f-6d90198c1079",
-        "name": "offline_access",
-        "description": "${role_offline-access}",
-        "composite": false,
-        "clientRole": false,
-        "containerId": "99743964-0a5e-4465-b088-705cc37e4b50",
-        "attributes": {}
-      }
-    ],
-    "client": {
-      "realm-management": [
-        {
-          "id": "7da87b42-ea35-44b7-82dd-2ee9381d2781",
-          "name": "view-events",
-          "description": "${role_view-events}",
-          "composite": false,
-          "clientRole": true,
-          "containerId": "0d77f9c0-b55f-4fbe-aa6f-be99468c62bc",
-          "attributes": {}
-        },
-        {
-          "id": "aed1f5e8-5cb4-4130-97c4-e413d56aeb29",
-          "name": "manage-identity-providers",
-          "description": "${role_manage-identity-providers}",
-          "composite": false,
-          "clientRole": true,
-          "containerId": "0d77f9c0-b55f-4fbe-aa6f-be99468c62bc",
-          "attributes": {}
-        },
-        {
-          "id": "150281cb-94af-41d6-a883-37db71cb77e4",
-          "name": "query-groups",
-          "description": "${role_query-groups}",
-          "composite": false,
-          "clientRole": true,
-          "containerId": "0d77f9c0-b55f-4fbe-aa6f-be99468c62bc",
-          "attributes": {}
-        },
-        {
-          "id": "872bb5d4-ddf9-4845-ad6e-e324421343d6",
-          "name": "manage-events",
-          "description": "${role_manage-events}",
-          "composite": false,
-          "clientRole": true,
-          "containerId": "0d77f9c0-b55f-4fbe-aa6f-be99468c62bc",
-          "attributes": {}
-        },
-        {
-          "id": "48106d6f-d4f1-4af7-8ba0-9255e1ae1268",
-          "name": "query-clients",
-          "description": "${role_query-clients}",
-          "composite": false,
-          "clientRole": true,
-          "containerId": "0d77f9c0-b55f-4fbe-aa6f-be99468c62bc",
-          "attributes": {}
-        },
-        {
-          "id": "1ef92696-d18c-43f0-bd53-4ab90103c90e",
-          "name": "impersonation",
-          "description": "${role_impersonation}",
-          "composite": false,
-          "clientRole": true,
-          "containerId": "0d77f9c0-b55f-4fbe-aa6f-be99468c62bc",
-          "attributes": {}
-        },
-        {
-          "id": "d40597b3-fb63-43ef-8ce5-da065eaa83cb",
-          "name": "view-realm",
-          "description": "${role_view-realm}",
-          "composite": false,
-          "clientRole": true,
-          "containerId": "0d77f9c0-b55f-4fbe-aa6f-be99468c62bc",
-          "attributes": {}
-        },
-        {
-          "id": "7afad60f-f642-4b8c-af39-dfcf7351e9e9",
-          "name": "manage-realm",
-          "description": "${role_manage-realm}",
-          "composite": false,
-          "clientRole": true,
-          "containerId": "0d77f9c0-b55f-4fbe-aa6f-be99468c62bc",
-          "attributes": {}
-        },
-        {
-          "id": "2f17a6d2-0450-4e98-bf95-0687f9d9253b",
-          "name": "realm-admin",
-          "description": "${role_realm-admin}",
-          "composite": true,
-          "composites": {
-            "client": {
-              "realm-management": [
-                "view-events",
-                "manage-identity-providers",
-                "query-groups",
-                "manage-events",
-                "query-clients",
-                "view-realm",
-                "impersonation",
-                "manage-realm",
-                "view-clients",
-                "manage-clients",
-                "view-identity-providers",
-                "manage-users",
-                "query-realms",
-                "create-client",
-                "query-users",
-                "view-authorization",
-                "view-users",
-                "manage-authorization"
-              ]
-            }
-          },
-          "clientRole": true,
-          "containerId": "0d77f9c0-b55f-4fbe-aa6f-be99468c62bc",
-          "attributes": {}
-        },
-        {
-          "id": "f2169d54-8e12-4413-a5b8-a86602a293e1",
-          "name": "view-clients",
-          "description": "${role_view-clients}",
-          "composite": true,
-          "composites": {
-            "client": {
-              "realm-management": [
-                "query-clients"
-              ]
-            }
-          },
-          "clientRole": true,
-          "containerId": "0d77f9c0-b55f-4fbe-aa6f-be99468c62bc",
-          "attributes": {}
-        },
-        {
-          "id": "8bef7fda-1c14-4677-bdf7-5a434d2b599c",
-          "name": "manage-clients",
-          "description": "${role_manage-clients}",
-          "composite": false,
-          "clientRole": true,
-          "containerId": "0d77f9c0-b55f-4fbe-aa6f-be99468c62bc",
-          "attributes": {}
-        },
-        {
-          "id": "1b5dc115-d9b6-423e-9381-bc55132490c2",
-          "name": "manage-users",
-          "description": "${role_manage-users}",
-          "composite": false,
-          "clientRole": true,
-          "containerId": "0d77f9c0-b55f-4fbe-aa6f-be99468c62bc",
-          "attributes": {}
-        },
-        {
-          "id": "1b8a62b2-8ff6-4d4b-99cd-7dd20942e000",
-          "name": "view-identity-providers",
-          "description": "${role_view-identity-providers}",
-          "composite": false,
-          "clientRole": true,
-          "containerId": "0d77f9c0-b55f-4fbe-aa6f-be99468c62bc",
-          "attributes": {}
-        },
-        {
-          "id": "e5cadbb7-4f79-4f79-b15d-4909b8dc00ff",
-          "name": "query-realms",
-          "description": "${role_query-realms}",
-          "composite": false,
-          "clientRole": true,
-          "containerId": "0d77f9c0-b55f-4fbe-aa6f-be99468c62bc",
-          "attributes": {}
-        },
-        {
-          "id": "4dd9aca4-5f95-4e7f-a55d-2d990d21735b",
-          "name": "create-client",
-          "description": "${role_create-client}",
-          "composite": false,
-          "clientRole": true,
-          "containerId": "0d77f9c0-b55f-4fbe-aa6f-be99468c62bc",
-          "attributes": {}
-        },
-        {
-          "id": "eedec5ca-c00d-4642-99f8-99c9887e763a",
-          "name": "query-users",
-          "description": "${role_query-users}",
-          "composite": false,
-          "clientRole": true,
-          "containerId": "0d77f9c0-b55f-4fbe-aa6f-be99468c62bc",
-          "attributes": {}
-        },
-        {
-          "id": "c64f372d-27ec-442a-bde2-574f00d65aff",
-          "name": "view-authorization",
-          "description": "${role_view-authorization}",
-          "composite": false,
-          "clientRole": true,
-          "containerId": "0d77f9c0-b55f-4fbe-aa6f-be99468c62bc",
-          "attributes": {}
-        },
-        {
-          "id": "370baddf-2832-41ec-8915-d425d6fc39d2",
-          "name": "view-users",
-          "description": "${role_view-users}",
-          "composite": true,
-          "composites": {
-            "client": {
-              "realm-management": [
-                "query-groups",
-                "query-users"
-              ]
-            }
-          },
-          "clientRole": true,
-          "containerId": "0d77f9c0-b55f-4fbe-aa6f-be99468c62bc",
-          "attributes": {}
-        },
-        {
-          "id": "31317b52-0422-42eb-ba4b-eedb6a1405dd",
-          "name": "manage-authorization",
-          "description": "${role_manage-authorization}",
-          "composite": false,
-          "clientRole": true,
-          "containerId": "0d77f9c0-b55f-4fbe-aa6f-be99468c62bc",
-          "attributes": {}
-        }
-      ],
-      "security-admin-console": [],
-      "admin-cli": [],
-      "account-console": [],
-      "gazon-service": [
-        {
-          "id": "151700b7-a406-4493-b14a-c33df5731bc9",
-          "name": "client_admin",
-          "description": "",
-          "composite": false,
-          "clientRole": true,
-          "containerId": "6f3743f9-8eef-4b13-8ffe-94cb3c6b88b5",
-          "attributes": {}
-        },
-        {
-          "id": "66f2c301-cf5b-4999-91f0-afcadef8ae85",
-          "name": "client_user",
-          "description": "",
-          "composite": false,
-          "clientRole": true,
-          "containerId": "6f3743f9-8eef-4b13-8ffe-94cb3c6b88b5",
-          "attributes": {}
-        }
-      ],
-      "broker": [
-        {
-          "id": "a828feb5-539d-4b7a-bd7f-1e26ad220b10",
-          "name": "read-token",
-          "description": "${role_read-token}",
-          "composite": false,
-          "clientRole": true,
-          "containerId": "e6c6c739-9198-4647-a633-65dbc3c88320",
-          "attributes": {}
-        }
-      ],
-      "account": [
-        {
-          "id": "8653cc9e-8cb7-47dc-8aba-64a91ab2a7b5",
-          "name": "delete-account",
-          "description": "${role_delete-account}",
-          "composite": false,
-          "clientRole": true,
-          "containerId": "968e6f5f-d68e-434f-8954-ffbb68295d21",
-          "attributes": {}
-        },
-        {
-          "id": "e2c31cdf-87e6-4f2a-abe7-75276329a175",
-          "name": "manage-account",
-          "description": "${role_manage-account}",
-          "composite": true,
-          "composites": {
-            "client": {
-              "account": [
-                "manage-account-links"
-              ]
-            }
-          },
-          "clientRole": true,
-          "containerId": "968e6f5f-d68e-434f-8954-ffbb68295d21",
-          "attributes": {}
-        },
-        {
-          "id": "e412218e-8c77-4079-ad63-67397061daa9",
-          "name": "manage-consent",
-          "description": "${role_manage-consent}",
-          "composite": true,
-          "composites": {
-            "client": {
-              "account": [
-                "view-consent"
-              ]
-            }
-          },
-          "clientRole": true,
-          "containerId": "968e6f5f-d68e-434f-8954-ffbb68295d21",
-          "attributes": {}
-        },
-        {
-          "id": "3e19ec51-fb31-430a-9e3f-a22e36cdf8a4",
-          "name": "manage-account-links",
-          "description": "${role_manage-account-links}",
-          "composite": false,
-          "clientRole": true,
-          "containerId": "968e6f5f-d68e-434f-8954-ffbb68295d21",
-          "attributes": {}
-        },
-        {
-          "id": "47c4100a-8fcd-4ab7-9fd9-7fe86e983cdf",
-          "name": "view-consent",
-          "description": "${role_view-consent}",
-          "composite": false,
-          "clientRole": true,
-          "containerId": "968e6f5f-d68e-434f-8954-ffbb68295d21",
-          "attributes": {}
-        },
-        {
-          "id": "535b61f4-f13b-49bc-866f-78ea4cca970b",
-          "name": "view-profile",
-          "description": "${role_view-profile}",
-          "composite": false,
-          "clientRole": true,
-          "containerId": "968e6f5f-d68e-434f-8954-ffbb68295d21",
-          "attributes": {}
-        },
-        {
-          "id": "4eb8e6a2-6aca-4e05-badc-695b0ec08256",
-          "name": "view-groups",
-          "description": "${role_view-groups}",
-          "composite": false,
-          "clientRole": true,
-          "containerId": "968e6f5f-d68e-434f-8954-ffbb68295d21",
-          "attributes": {}
-        },
-        {
-          "id": "b6d183e5-9466-4fc2-a82b-219f1cc05404",
-          "name": "view-applications",
-          "description": "${role_view-applications}",
-          "composite": false,
-          "clientRole": true,
-          "containerId": "968e6f5f-d68e-434f-8954-ffbb68295d21",
-          "attributes": {}
-        }
-      ]
-    }
-  },
-  "groups": [],
   "defaultRole": {
     "id": "6d041105-b719-49a3-a9a9-192342be0d3b",
     "name": "default-roles-gazon-service-realm",
@@ -646,7 +234,9 @@
       "publicClient": true,
       "frontchannelLogout": false,
       "protocol": "openid-connect",
-      "attributes": {},
+      "attributes": {
+        "post.logout.redirect.uris": "+"
+      },
       "authenticationFlowBindingOverrides": {},
       "fullScopeAllowed": false,
       "nodeReRegistrationTimeout": 0,
@@ -684,7 +274,9 @@
       "publicClient": false,
       "frontchannelLogout": false,
       "protocol": "openid-connect",
-      "attributes": {},
+      "attributes": {
+        "post.logout.redirect.uris": "+"
+      },
       "authenticationFlowBindingOverrides": {},
       "fullScopeAllowed": false,
       "nodeReRegistrationTimeout": 0,
@@ -774,7 +366,9 @@
       "publicClient": false,
       "frontchannelLogout": false,
       "protocol": "openid-connect",
-      "attributes": {},
+      "attributes": {
+        "post.logout.redirect.uris": "+"
+      },
       "authenticationFlowBindingOverrides": {},
       "fullScopeAllowed": false,
       "nodeReRegistrationTimeout": 0,
@@ -878,8 +472,8 @@
           "consentRequired": false,
           "config": {
             "id.token.claim": "true",
-            "introspection.token.claim": "true",
             "access.token.claim": "true",
+            "introspection.token.claim": "true",
             "userinfo.token.claim": "true"
           }
         },
@@ -1135,8 +729,9 @@
           "consentRequired": false,
           "config": {
             "id.token.claim": "true",
+            "access.token.claim": "true",
             "introspection.token.claim": "true",
-            "access.token.claim": "true"
+            "userinfo.token.claim": "true"
           }
         }
       ]
@@ -1205,6 +800,7 @@
           "config": {
             "introspection.token.claim": "true",
             "multivalued": "true",
+            "userinfo.token.claim": "true",
             "user.attribute": "foo",
             "id.token.claim": "true",
             "access.token.claim": "true",
@@ -1248,8 +844,8 @@
           "protocolMapper": "oidc-audience-resolve-mapper",
           "consentRequired": false,
           "config": {
-            "introspection.token.claim": "true",
-            "access.token.claim": "true"
+            "access.token.claim": "true",
+            "introspection.token.claim": "true"
           }
         },
         {
@@ -1389,8 +985,8 @@
           "protocolMapper": "oidc-allowed-origins-mapper",
           "consentRequired": false,
           "config": {
-            "introspection.token.claim": "true",
-            "access.token.claim": "true"
+            "access.token.claim": "true",
+            "introspection.token.claim": "true"
           }
         }
       ]
@@ -1479,14 +1075,14 @@
         "subComponents": {},
         "config": {
           "allowed-protocol-mapper-types": [
-            "oidc-sha256-pairwise-sub-mapper",
-            "oidc-usermodel-property-mapper",
-            "saml-user-attribute-mapper",
             "oidc-usermodel-attribute-mapper",
-            "saml-role-list-mapper",
-            "saml-user-property-mapper",
+            "oidc-usermodel-property-mapper",
             "oidc-full-name-mapper",
-            "oidc-address-mapper"
+            "oidc-address-mapper",
+            "saml-user-property-mapper",
+            "saml-user-attribute-mapper",
+            "saml-role-list-mapper",
+            "oidc-sha256-pairwise-sub-mapper"
           ]
         }
       },
@@ -1498,12 +1094,12 @@
         "subComponents": {},
         "config": {
           "allowed-protocol-mapper-types": [
+            "oidc-usermodel-property-mapper",
             "oidc-full-name-mapper",
+            "oidc-sha256-pairwise-sub-mapper",
             "oidc-address-mapper",
             "saml-user-attribute-mapper",
-            "oidc-usermodel-property-mapper",
             "oidc-usermodel-attribute-mapper",
-            "oidc-sha256-pairwise-sub-mapper",
             "saml-role-list-mapper",
             "saml-user-property-mapper"
           ]
@@ -2245,8 +1841,8 @@
   "attributes": {
     "cibaBackchannelTokenDeliveryMode": "poll",
     "cibaAuthRequestedUserHint": "login_hint",
-    "oauth2DevicePollingInterval": "5",
     "clientOfflineSessionMaxLifespan": "0",
+    "oauth2DevicePollingInterval": "5",
     "clientSessionIdleTimeout": "0",
     "clientOfflineSessionIdleTimeout": "0",
     "cibaInterval": "5",
