--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - gazon-db
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://gazon-db:5432/gazon_db
+      - SPRING_PROFILES_ACTIVE=security
   gazon-db:
     image: 'postgres:12.12'
     ports:
