#162 - Add gazon-payment microservice. Add PaymentRestController

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>api-gateway</module>
         <module>gazon-frontend</module>
         <module>data-generator</module>
+        <module>gazon-payment</module>
     </modules>
 
     <properties>
